Swap UserRequest with generated UserRequest class
