# backend/src/main/java/com/codecool/travelplanner/model/playload/UserRequest.java
@@ -1,10 +1,0 @@
-package com.codecool.travelplanner.model.playload;
-
-import lombok.Data;
-
-@Data
-public class UserRequest {
-    private String username;
-    private String email;
-    private String password;
-}
