# backend/src/main/resources/openapi/travel-planner-api.yaml
@@ -16,7 +16,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RegisterRequest'
+              $ref: '#/components/schemas/UserRequest'
       responses:
         '201':
           description: User successfully registered
@@ -31,7 +31,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/LoginRequest'
+              $ref: '#/components/schemas/UserRequest'
       responses:
         '200':
           description: Successful login
@@ -257,22 +257,14 @@ components:
       bearerFormat: JWT
 
   schemas:
-    RegisterRequest:
+    UserRequest:
       type: object
       properties:
         email:
           type: string
         password:
           type: string
-        name:
-          type: string
-
-    LoginRequest:
-      type: object
-      properties:
-        email:
-          type: string
-        password:
+        username:
           type: string
 
     AuthResponse:
